headscale/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: headscale-pod
  namespace: headscale
  labels:
    scg.skku.ac.kr/author: lhwdev

    app.kubernetes.io/name: app
    app.kubernetes.io/instance: headscle-pod-abge2e
    app.kubernetes.io/part-of: headscale
    app.kubernetes.io/version: "0.0.1"

  annotations:
    scg.skku.ac.kr/security: |
      risk: high
      risk-reason: [port-exposure]

    kubernetes.io/description: |
      Pod that runs headscale instance.
      Image provided by headscale/headscale.
      Links /home/lhwdev/headscale/config and /home/lhwdev/headscale/var.

spec:
  nodeName: master

  containers:
    - name: headscale-main
      image: headscale/headscale:0.22.1
      command: ["headscale", "serve"]
      ports:
        - containerPort: 8080
        - containerPort: 9090
      volumeMounts:
        - mountPath: /etc/headscale
          name: headscale-config
        - mountPath: /var/lib/headscale
          name: headscale-var
      resources:
        limits:
          memory: 512Mi
          cpu: 500m

  volumes:
    - name: headscale-config
      hostPath:
        path: /home/lhwdev/headscale/config
        type: Directory
    - name: headscale-var
      hostPath:
        path: /home/lhwdev/headscale/var
        type: Directory
