headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale-service
  namespace: headscale

spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app
