headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: headscale-ingress
  namespace: headscale
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - headscale.lhwdev.scg.skku.ac.kr
      secretName: lhwdev-headscale-tls
  rules:
    - host: test.headscale.lhwdev.scg.skku.ac.kr
